# vappman

./: .gitignore  README.md  deploy  pyproject.HOWTO  pyproject.toml
src/vappman/: PowerWindow.py  main.py
vappman/: main.py
