[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "vappman"
version = "0.9.3"
description = "A visual wrapper for appman"
authors = [
    { name = "Joe Defen", email = "joedef@google.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["app", "installer", "manager", "appimages"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    'importlib-metadata; python_version<"3.8"',
    'psutil>=5.9',
]

[project.urls]
"Homepage" = "https://github.com/joedefen/vappman"
"Bug Tracker" = "https://github.com/joedefen/vappman/issues"

[project.scripts]
vappman = "vappman.main:main"

[tool.flit.module]
name = "vappman"